test/scanner/good12.bminor
x: integer = 65;
y: char = 'A';
if(x>y) print "X is greater than Y" // error: x and y are of different types!

f: integer = 0;
if(f) "F is not a bool!"      // error: f is not a boolean!

writechar: function void ( c: char );
a: integer = 65;
writechar(a);  // error: a is not a char!

b: array [2] boolean = {true,false};
x: integer = 0;
x = b[0];      // error: x is not a boolean!

x: integer = 0;
y: float = x;  // error: integer types can not be implicitly converted to float
